--- a/css/septime-index.css
+++ b/css/septime-index.css
@@ -78,10 +78,9 @@ width: 500px;
 margin: auto;
 padding-top: 50px;
 
-
 text-align: center;
-
 }
+
 header p {
 text-transform: uppercase;
 font-style: normal;
@@ -90,7 +89,6 @@ color: #000;
 }
 
 header h1 {
-   
     border-top: 2px solid #000;
     border-bottom: 2px solid #000;
     font-size: 2.5em;
@@ -128,9 +126,8 @@ p {
     padding-top: 16px;
 }
 .note {
-    width: 50%;
     margin-top: 5px;
-    background: rgba(218, 218, 218, 0.623);
+    background-color: rgba(218, 218, 218, 0.623);
     border-radius: 15px;
     padding: 0 0 15px 10px;
     text-transform: uppercase;
@@ -141,11 +138,6 @@ p {
     float: left;
     padding: 150px 15px 0 15px;
    
-}
-
-footer {
- height: 300px;
-text-align: center;
 }
 
 #assiette .texte-assiette {
@@ -178,7 +170,10 @@ text-align: center;
 .img-assiette {
     background: url(../img/assiette.png) no-repeat;
     object-position: 50% 50%;
+    background-position: center;
+    background-size: cover;
 }
+
 .img-resto-01 {
     background: url(../img/resto_01_grande.jpg);
     object-position: 50% 50%;
@@ -199,4 +194,35 @@ object-position: 50% 50%;
 .img-resto-04 {
     background: url(../img/resto_04.jpg) no-repeat;
     object-position: 50% 50%;
+}
+footer {
+    height: 300px;
+   text-align: center;
+   padding-bottom: 100px;
+   }
+footer h2{
+width: 500px;
+margin: auto;
+padding: 0;
+
+
+border-bottom: 2px solid #000;
+border-top: 2px solid #000;
+
+line-height: 50px;
+letter-spacing: .5em;
+} 
+address {
+font-family: serif;
+font-size: smaller;
+text-transform: uppercase;
+}
+
+footer figcaption {
+position: relative;
+bottom: 100px;
+background-color: #fff;
+
+
+font-weight: bold;
 }
